--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
 baseURL: ''
-title: TailBliss
+title: Prickly Pear Analytics
 languageCode: en-us
 DefaultContentLanguage: en
 enableEmoji: true
@@ -47,50 +47,49 @@ markup:
       xhtml: false
 
 params:
-  author: Nusser Studios
-  authorimage: ../assets/images/global/author.webp
-  og_image: /images/tailbliss-cover.png
-  moto: "Super Fast, and Flexible"
-  description: "A Hugo theme built with love, using TailwindCSS 3, Alpine.JS, and Hugo Pipes. Images are optimized for use with Hugo Pipes for WebP format."
+  author: Rodney Murray
+  authorimage: /images/ppa.png
+  og_image: /images/pages/ppa.jpeg
+  moto: Create value through innovation
+  description: > 
+    Prickly Pear Analytics leverages cutting-edge data analytics and machine learning to transform complex data into actionable insights, 
+    driving innovation and value creation for businesses. 
+    Our expertise helps organizations optimize decision-making, uncover opportunities, and excel in a data-driven world.
   disable_theme_toggle: false
   disable_stay_uptodate: false
 
   p1:
     heading: "Our mission"
-    image: "images/pages/our-mission.png"
+    image: "/images/pages/ml_insights.webp"
     content:
-      - text: "Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi. Cursus faucibus nunc nisl netus morbi vel porttitor vitae ut. Amet vitae fames senectus vitae."
-      - text: "Sollicitudin tristique eros erat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna. Sollicitudin tristique eroserat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna."
-      - text: "Rhoncus nisl, libero egestas diam fermentum dui. At quis tincidunt vel ultricies. Vulputate aliquet velit faucibus semper. Pellentesque in venenatis vestibulum consectetur nibh id. In id ut tempus egestas. Enim sit aliquam nec, a. Morbi enim fermentum lacus in. Viverra."
-  p2:
-    heading: "Just in time for Hacktoberfest with JIT Tailwind."
-    image: "images/pages/hacktoberfest.jpg"
-    content:
-      - text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at purus non enim commodo tincidunt vel in nulla. Aenean pretium dolor non ultricies bibendum. Etiam quis blandit enim. Nunc condimentum ut lorem in faucibus. Phasellus varius ligula et commodo tristique. Nunc sodales nisl nec laoreet vehicula. Donec velit nibh, sollicitudin at nulla a, egestas dignissim eros. Sed lacinia hendrerit interdum. Vestibulum pellentesque sem venenatis nisl tempor accumsan sit amet tempus felis. Mauris leo diam, porttitor nec bibendum id, tempus ac nulla. Etiam congue ornare erat at convallis. Donec in nisi dapibus, mattis risus vel, imperdiet enim. Donec fermentum sit amet tortor nec tincidunt. Nam nec lectus tortor. Nunc sit amet laoreet orci, porta ornare massa. Phasellus eget lorem mi. Nam eleifend ultricies sapien, quis mollis leo bibendum at. Quisque viverra lorem sit amet magna aliquet, et dignissim arcu eleifend."
+      - text: >
+          At Prickly Pear Analytics, our mission is to harness cutting-edge data analytics and machine learning to transform complex information
+          into actionable insights, empowering businesses to innovate and create lasting value. Guided by our motto, "Create value through 
+          innovation," we strive to optimize decision-making, uncover new opportunities, and drive meaningful impact in a data-driven world. 
+          We are committed to delivering ethical, transparent, and forward-thinking analytics solutions that help our clients stay ahead in
+           an ever-evolving landscape.
+  
   p3:
-    heading: "Backed by world-renowned investors"
+    heading: "Trusted by "
     content:
-      - text: "Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi. Cursus faucibus nunc nisl netus morbi vel porttitor vitae ut. Amet vitae fames senectus vitae."
-    links:
-      - text: Meet our investors and advisors
-        url: "#"
+      - text: "Prickly Pear Analytics has built a reputation though fast and reliable delivery of insights from data."
     logos:
-      - identifier: a
-        image: "images/global/sample-logo.svg"
-        alt: "a"
-      - identifier: b
-      - identifier: c
-      - identifier: d
-      - identifier: e
-      - identifier: f
+      - identifier: COP
+        image: "images/global/cop_logo.jpg"
+      - identifier: "NorthWestern Energy"
+        image: "images/global/northwestern_energy.jpeg"
+      # - identifier: d
+      # - identifier: e
+      # - identifier: f
   p4:
-    heading: "From the blog"
+    heading: From the blog
     content:
-      - text: "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa libero labore natus atque, ducimus sed."
+      - text: >
+          Take a look at our latest posts to get a feel for how we approach problems and can help create value for your business.
   p5:
-    heading: "Stay Up to Date"
+    heading: Stay Up to Date
     content:
-      - text: "Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque."
+      - text: Sign up for our newsletter to get the latest news and updates.
     action: "#"
     label: "Email address"
     placeholder: "Enter your email"
